--- a/offer.html
+++ b/offer.html
@@ -81,6 +81,7 @@
         <div class="row px-lg-5 mx-0 marginTop">
             <div class="col-12 p-0">
                 <div class="offerPageBackground h-100">
+                    <div class="bgOpacityBlack d-none d-lg-block"></div>
                     <div class="container d-flex flex-column justify-content-between h-100 p-0">
                         <div class="row mt-lg-5 pt-lg-5 m-0">
                             <div class="col-12 d-flex flex-column p-0">
@@ -88,19 +89,19 @@
                                     Oferta
                                 </h1>
                                 <img src="img/oferta.jpg" class="img-fluid d-lg-none" alt="" data-aos="fade-up">
-                                <span class="mt-5 pageTxt mx-5 mx-lg-0 pb-5 pb-lg-0" data-aos="fade-up" data-aos-delay="100">
-                                    Oferujemy wsparcie w zakresie budowania i wdrażania strategii rozwoju, zaórwno w drodze wzrostu<br>
-                                    orgranicznego, jak i poprzez akwizycje. Pomagamy właścicielom i zarządom przedsiębiorstw w implemntacji<br>
+                                <span class="mt-5 pageTxt mx-5 mx-lg-0 pb-5 pb-lg-0 offerMainTextWidth" data-aos="fade-up" data-aos-delay="100">
+                                    Oferujemy wsparcie w zakresie budowania i wdrażania strategii rozwoju, zaórwno w drodze wzrostu
+                                    orgranicznego, jak i poprzez akwizycje. Pomagamy właścicielom i zarządom przedsiębiorstw w implemntacji
                                     efektywnych procesów zarządzania ukierunkowanych wzrost wartości.   
                                 </span>
                             </div>
                         </div>
                         <div class="row m-0 px-5 px-lg-0">
-                            <div class="col-12 col-lg-7 p-0" data-aos="fade-up" data-aos-delay="200">
+                            <div class="col-12 col-lg-6 p-0" data-aos="fade-up" data-aos-delay="200">
                                 <div class="offerPageBackgroundBox d-flex flex-column justify-content-center p-lg-5">
                                     <div class="row mb-3 ml-lg-4 m-0 mt-5 mt-lg-0" >
-                                        <span data-aos="fade-up" data-aos-delay="200">
-                                            Strategie wieloletnie i optymalizacja procesów,<br>
+                                        <span data-aos="fade-up" data-aos-delay="200" class="offerBoxTextWidth">
+                                            Strategie wieloletnie i optymalizacja procesów,
                                             w tym systemy motywacje dla kadry zarządzajęcej. 
                                         </span>
                                        
@@ -112,7 +113,7 @@
                                             </div>
                                             <span class="btnTxt bluePrimaryTxt flex-grow-1 align-self-center text-center">Dowiedz się wiecej</span>
                                         </a>
-                                        <a name="" id="" class="d-lg-none buttonRounded hvr-icon-wobble-horizontal blackHoverShadow d-flex justify-content-lg-center justify-content-between" href="#strategy" role="button">
+                                        <a name="" id="" class="d-lg-none buttonRounded w-100 hvr-icon-wobble-horizontal blackHoverShadow d-flex justify-content-lg-center justify-content-between" href="#strategy" role="button">
                                             <div class="arrowRight mr-lg-4">
                                                 <img src="img/arrow_right2.svg" class="img-fluid hvr-icon" alt="">
                                             </div>
@@ -121,11 +122,11 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-12 col-lg-5 pl-lg-2 p-0" data-aos="fade-up" data-aos-delay="250">
+                            <div class="col-12 col-lg-6 pl-lg-2 p-0" data-aos="fade-up" data-aos-delay="250">
                                 <div class="offerPageBackgroundBox d-flex flex-column justify-content-center p-lg-5">
                                     <div class="row mb-3 ml-lg-4 m-0 mt-5 mt-lg-0" data-aos="fade-up" data-aos-delay="250">
-                                        <span>
-                                            Procesy M&A, sprzedaż spółek<br>
+                                        <span class="offerBoxTextWidth">
+                                            Procesy M&A, sprzedaż spółek
                                             oraz inwestycje kapitałowe 
                                         </span>
                                        
@@ -137,7 +138,7 @@
                                             </div>
                                             <span class="btnTxt bluePrimaryTxt flex-grow-1 align-self-center text-center">Dowiedz się wiecej</span>
                                         </a>
-                                        <a name="" id="" class="d-lg-none buttonRounded hvr-icon-wobble-horizontal blackHoverShadow d-flex justify-content-lg-center justify-content-between" href="#manda" role="button">
+                                        <a name="" id="" class="d-lg-none w-100 buttonRounded hvr-icon-wobble-horizontal blackHoverShadow d-flex justify-content-lg-center justify-content-between" href="#manda" role="button">
                                             <div class="arrowRight mr-lg-4">
                                                 <img src="img/arrow_right2.svg" class="img-fluid hvr-icon" alt="">
                                             </div>
@@ -155,34 +156,34 @@
         <div class="container my-0 py-0 px-5 px-lg-0">
             <div class="row my-5 mx-0" id="strategy" data-aos="fade-up" >
                 <div class="col-12 p-0">
-                    <h1 class="categoryOffer">
+                    <h1 class="categoryOffer py-lg-5">
                         Strategie wieloletnie i optymalizacja procesów,<br>
                         w tym systemy motywacyjne dla kadry zarządzającej.
                     </h1>        
                 </div>
             </div>
-            <div class="row mx-0" data-aos="zoom-out">
+            <div class="row mx-0" data-aos="fade-up">
                 <div class="col-12 d-flex align-items-center flex-column flex-lg-row offerBorderedBox pb-5 pb-lg-0">
-                    <div class="col-lg-3">
+                    <div class="col-lg-3 py-1">
                         <img src="img/strategie.jpg" class="img-fluid" alt="">
                     </div>
-                    <div data-aos="fade-up" data-aos-delay="200">
+                    <div class="col-lg-6">
                         <span class="categoryTxt">
-                            Definiowanie wieloletnich strategii rozwoju ukierunkowanych na budowę wartości, w tym<br>
-                            identyfikacji kluczowych generatorów wartości spółek (strategicznych elementów kapitału<br>
+                            Definiowanie wieloletnich strategii rozwoju ukierunkowanych na budowę wartości, w tym
+                            identyfikacji kluczowych generatorów wartości spółek (strategicznych elementów kapitału
                             intelektualnego)
                         </span>
                     </div>
                 </div>
             </div>
-            <div class="row mt-5 mb-5 mx-0" data-aos="zoom-out">
+            <div class="row mt-5 mb-5 mx-0" data-aos="fade-up">
                 <div class="col-12 d-flex align-items-center flex-column flex-lg-row offerBorderedBox">
-                    <div class="col-lg-3">
+                    <div class="col-lg-3 py-1">
                         <img src="img/projektowanie.jpg" class="img-fluid" alt="">
                     </div>
-                    <div class="py-5" data-aos="fade-up" data-aos-delay="200">
+                    <div class="py-5">
                         <span class="categoryTxt">
-                            Projektowanie i optymalizacja procesów wewnętrznych nastawiona<br>
+                            Projektowanie i optymalizacja procesów wewnętrznych nastawiona
                             na maksymalizacje efektywności i produktywności zasobów
                         </span>
                         <ul class="offerList">
@@ -194,12 +195,12 @@
                     </div>
                 </div>
             </div>
-            <div class="row mt-5 mb-5 mx-0" data-aos="zoom-out">
+            <div class="row mt-5 mb-5 mx-0" data-aos="fade-up">
                 <div class="col-12 d-flex align-items-center flex-column flex-lg-row offerBorderedBox">
-                    <div class="col-lg-3">
+                    <div class="col-lg-3 py-1">
                         <img src="img/sukcesja.jpg" class="img-fluid" alt="">
                     </div>
-                    <div class="py-5" data-aos="fade-up" data-aos-delay="200">
+                    <div class="py-5">
                         <span class="categoryTxt">
                             Wsparcie w procesie budowania sukcesji, w szczególności w spółkach rodzinnych
                         </span>
@@ -215,17 +216,17 @@
             </div>
             <div class="row my-5 mx-0" id="manda" data-aos="fade-up">
                 <div class="col-12 p-0">
-                    <h1 class="categoryOffer">
+                    <h1 class="categoryOffer py-lg-5">
                         Procesy M&A, sprzedaż spółek oraz inwestycje kapitałowe
                     </h1>        
                 </div>
             </div>
-            <div class="row mx-0" data-aos="zoom-out">
+            <div class="row mx-0" data-aos="fade-up">
                 <div class="col-12 d-flex align-items-center flex-column flex-lg-row offerBorderedBox pb-5 pb-lg-0">
-                    <div class="col-lg-3">
+                    <div class="col-lg-3 py-1">
                         <img src="img/rozbudowa.jpg" class="img-fluid" alt="">
                     </div>
-                    <div class="py-5"  data-aos="fade-up" data-aos-delay="200">
+                    <div class="py-5">
                         <span class="categoryTxt">
                             Wsparcie w realizacji strategii wzrostu przez akwizycje jako uzupełnienie strategii 
                             wzrostu organicznego                        
@@ -240,12 +241,12 @@
                     </div>
                 </div>
             </div>
-            <div class="row mt-5 mb-5 mx-0" data-aos="zoom-out">
+            <div class="row mt-5 mb-5 mx-0" data-aos="fade-up">
                 <div class="col-12 d-flex align-items-center flex-column flex-lg-row offerBorderedBox">
-                    <div class="col-lg-3">
+                    <div class="col-lg-3 py-1">
                         <img src="img/zysk.jpg" class="img-fluid" alt="">
                     </div>
-                    <div class="py-5" data-aos="fade-up" data-aos-delay="200">
+                    <div class="py-5">
                         <span class="categoryTxt">
                             Wsparcie w procesie sprzedaży spółek (do inwestorów strategicznych lub finansowych)
                         </span>
@@ -256,12 +257,12 @@
                     </div>
                 </div>
             </div>
-            <div class="row mt-5 mb-5 mx-0" data-aos="zoom-out">
+            <div class="row mt-5 mb-5 mx-0" data-aos="fade-up">
                 <div class="col-12 d-flex align-items-center flex-column flex-lg-row offerBorderedBox">
-                    <div class="col-lg-3">
+                    <div class="col-lg-3 py-1">
                         <img src="img/finansowanie.jpg" class="img-fluid" alt="">
                     </div>
-                    <div class="py-5" data-aos="fade-up" data-aos-delay="200">
+                    <div class="py-5">
                         <span class="categoryTxt">
                             Pozyskiwania finansowania na rozwój od inwestorów strategicznych i finansowych                        
                         </span>
