--- a/team.html
+++ b/team.html
@@ -129,18 +129,18 @@
                     </div>
                 </div>
             </div>
-            <div class="row mb-5 teamPersonBox mx-0">
+            <div class="row mb-5 teamPersonBox mx-0" data-aos="fade-up">
                 <div class="col-12 col-lg-8 d-flex justify-content-center flex-column p-0">
                     <div class="d-flex justify-content-center flex-column mb-5">
-                        <span class="teamName bluePrimaryTxt" data-aos="fade-up">Wojciech Olszenka</span>
-                        <span class="teamRole bluePrimaryTxt" data-aos="fade-up" data-aos-delay="50">Partner Zarządzający</span>
+                        <span class="teamName bluePrimaryTxt">Wojciech Olszenka</span>
+                        <span class="teamRole bluePrimaryTxt">Partner Zarządzający</span>
                     </div>
-                    <div class="d-lg-none teamPersonPhoto w-100 h-100 mb-5" data-aos="fade-up" data-aos-delay="50">
+                    <div class="d-lg-none teamPersonPhoto w-100 h-100 mb-5">
                         <img src="img/olszenka.jpg" class="img-fluid" alt="">
                     </div>
-                    <span class="pr-5" data-aos="fade-up" data-aos-delay="50">
+                    <span class="pr-5">
                         Posiada kilkunastoletnie doświadczenie w obszarze doradztwa strategicznego i biznesowego oraz procesów M&A, w tym realizacji procesów akwizycyjnych. Specjalizuje się w analizie biznesowej oraz identyfikacji generatorów wartości spółek, w szczególności w zakresie zasobów kapitału intelektualnego. Jako Manager Inwestycyjny funduszu Giza Polish Ventures zarządzał procesem identyfikacji i ewaluacji spółek innowacyjnych oraz procesami wyjść z inwestycji w spółki portfelowe.                    </span>
-                    <div class="row mx-0" data-aos="fade-up" data-aos-delay="50">
+                    <div class="row mx-0">
                         <a name="" id="" class="buttonRounded mt-5 hvr-icon-wobble-horizontal d-flex justify-content-lg-center justify-content-between" href="#" role="button">
                             <div class="arrowRight mr-lg-4">
                                 <img src="img/arrow_right2.svg" class="img-fluid hvr-icon" alt="">
@@ -149,7 +149,7 @@
                         </a>
                     </div>
                 </div>
-                <div class="col-12 col-lg-4 d-none d-lg-flex justify-content-end p-0" data-aos="fade-up" data-aos-delay="50">
+                <div class="col-12 col-lg-4 d-none d-lg-flex justify-content-end p-0">
                     <div class="teamPersonPhoto">
                         <img src="img/olszenka.jpg" class="img-fluid" alt="">
                     </div>
