--- a/about.html
+++ b/about.html
@@ -87,15 +87,15 @@
                 </div>
                 <div class="aboutUsPageBackground h-100">
                     <div class="container d-flex flex-column justify-content-between h-100 p-2 p-xl-0">
-                        <div class="row mt-lg-5 pt-lg-5 m-0">
+                        <div class="row mt-lg-5 pt-lg-5 pb-lg-5 m-0">
                             <div class="col-12 col-lg-4 d-flex flex-column p-0">
                                 <h1 class="pageName mx-5 mx-lg-0" data-aos="fade-up">
                                     O nas
                                 </h1>
                                 <img src="img/onas.jpg" class="img-fluid d-lg-none" alt="" data-aos="fade-up">
-                                <span class="mt-5 pageTxt mx-5 mx-lg-0 pb-5 pb-lg-0" >
-                                    <div data-aos="fade-up" data-aos-delay="100">Mamy na koncie liczne projekty doradcze, w ramach których wdrażaliśmy wieloletnie strategie rozwoju ukierunkowane na budowę wartości. Posiadamy doświadczenie w pracy ze spółkami z różnych sektorów, m.in. IT, TSL, budownictwo, dystrybucja, przemysł, usługi specjalistyczne.<br><br> Braliśmy udział w kilkudziesięciu procesach M&A zakończonych transakcją o wartości od kilku do kilkuset milionów zł, zarówno jako doradca po stronie kupującego (buy-side), jak i sprzedającego (sell-side). Przeprowadziliśmy szereg szczegółowych analiz due diligence oraz wycen spółek będących potencjalnymi celami akwizycyjnymi dla naszych klientów. W większości analizy dotyczyły spółek technologicznych, dla których stosujemy metodykę wyceny w oparciu o zasoby kapitału intelektualnego.</div>                                
-                                    <div class="row m-0" data-aos="fade-up" data-aos-delay="200">
+                                <span class="mt-5 pageTxt mx-5 mx-lg-0 pb-5 pb-lg-0" data-aos="fade-up">
+                                    <div class="mb-lg-5">Mamy na koncie liczne projekty doradcze, w ramach których wdrażaliśmy wieloletnie strategie rozwoju ukierunkowane na budowę wartości. Posiadamy doświadczenie w pracy ze spółkami z różnych sektorów, m.in. IT, TSL, budownictwo, dystrybucja, przemysł, usługi specjalistyczne.<br><br> Braliśmy udział w kilkudziesięciu procesach M&A zakończonych transakcją o wartości od kilku do kilkuset milionów zł, zarówno jako doradca po stronie kupującego (buy-side), jak i sprzedającego (sell-side). Przeprowadziliśmy szereg szczegółowych analiz due diligence oraz wycen spółek będących potencjalnymi celami akwizycyjnymi dla naszych klientów. W większości analizy dotyczyły spółek technologicznych, dla których stosujemy metodykę wyceny w oparciu o zasoby kapitału intelektualnego.</div>                                
+                                    <div class="row m-0" >
                                         <a name="" id="" class="d-none  mt-5 hvr-icon-wobble-horizontal d-lg-flex buttonRounded bg-white justify-content-lg-center justify-content-between" href="team.html" role="button">
                                             <div class="arrowRight mr-lg-4">
                                                 <img src="img/arrow_right.svg" class="img-fluid hvr-icon" alt="">
