--- a/contact.html
+++ b/contact.html
@@ -93,66 +93,43 @@
                 
             </div>
         </div>
-        <div class="container pt-lg-5 my-0 py-0 px-5 px-lg-0">
-            <div class="d-none d-lg-block position-absolute experienceWatermark pr-5">
+        <div class="container pt-lg-5 mb-lg-5 py-0 px-5 px-lg-0">
+            <div class="d-none d-lg-block position-absolute experienceWatermark">
                 <img src="img/dots.png" class="img-fluid" alt=""> 
             </div>
             <div class="row mt-5 contactPageBox mb-5 mb-lg-0 mx-0">
                 <div class="col-12 col-lg-6 p-0" data-aos="fade-up" data-aos-delay="100">
                     <div class="row d-flex flex-column mx-0">
                         <span class="text-black"><b>Team Value Partners spółka z ograniczoną odpowiedzialnością </b></span><br>
-                        <span class="secondaryTxt"> Krasińskiego 29/9, <br>
-                        40-019 Katowice, Polska <br>
+                        <span class="secondaryTxt"> Krasińskiego 29/9, <div class="d-inline d-lg-block "></div>
+                        40-019 Katowice, Polska 
                         <br><br>
                         KRS 0000678678 <br>
                         NIP 5252711594 <br>
                         REGON 367315883</span>
                     </div>
-                    <div class="row mt-5 pt-5 mx-0">
+                    <div class="row mt-3 mt-lg-5 pt-lg-5 mx-0">
                         <a href="" class="mailContact">biuro@teamvalue.pl</a>
                     </div>
                 </div>
                 <div class="col-12 col-lg-6 p-0" data-aos="fade-up" data-aos-delay="200">
-                    <div class="formBox pt-5 p-lg-5">
+                    <div class="shadowMobile d-lg-none"></div>
+                    <div class="formBox pt-5 mt-5 mt-lg-0">
                         <form>
-                            <input class="form-control form-control-sm mb-3" type="text" placeholder="Imię i nazwisko">
-                            <input class="form-control form-control-sm mb-3" type="text" placeholder="Email">
-                            <textarea class="form-control" rows="3" placeholder="Wiadomość"></textarea>
-                            <div class="row">
-                                <a name="" id="" class="buttonRounded mt-5 hvr-icon-wobble-horizontal d-flex justify-content-lg-center justify-content-between" href="#" role="button">
+                            <input class="contactInput mb-3" type="text" placeholder="Imię i nazwisko">
+                            <input class="contactInput mb-3" type="text" placeholder="Email">
+                            <textarea class="contactInput" style="height:auto;min-height:220px" rows="3" placeholder="Wiadomość"></textarea>
+                            <div class="row m-0">
+                                <a name="" id="" class="buttonRounded mt-4 hvr-icon-wobble-horizontal d-flex justify-content-lg-center justify-content-between" href="#" role="button">
                                     <div class="arrowRight mr-lg-4">
                                         <img src="img/arrow_right2.svg" class="img-fluid hvr-icon" alt="">
                                     </div>
-                                    <span class="btnTxt flex-grow-1 align-self-center text-center">Wyślij</span>
+                                    <span class="mx-lg-4 btnTxt flex-grow-1 align-self-center text-center">Wyślij</span>
                                 </a>
                             </div>
                         </form>
                     </div>
                 </div>
-            </div>
-        </div>
-        <div class="row px-lg-5 m-0">
-            <div class="col-12 p-0">
-                <div class="stopka">
-                    <div class="container d-lg-flex align-items-center justify-content-between p-0 d-none">
-                        <span>
-                            <span class="footerCompany">Team Value Partners spółka z orgraniczoną odpowiedzialnością</span><br>
-                            Zygmunta Krasińskiego 29/9, 40-019 Katowice, Polska<br>
-                            KRS 00006788678 NIP 5252711594 REGON 367315883
-                        </span>
-                        <div class="h-100 d-flex" id="stopkaMail">
-                            <img src="img/stopka1.png" class="img-fluid" alt="" >
-                            <div class="primaryBg d-flex justify-content-center align-items-center pt-5" >
-                                <a href="mailto:biuro@teamvalue.pl">biuro@teamvalue.pl</a>
-                            </div>
-                            <img src="img/stopka2.png" class="img-fluid" alt="">
-                        </div>
-                    </div>
-                    <div class="container d-lg-none d-flex align-items-center justify-content-end py-5">
-                        <a href="mailto:biuro@teamvalue.pl" class="bluePrimaryTxt">biuro@teamvalue.pl</a>
-                    </div>
-                </div>
-                
             </div>
         </div>
     </div>
