--- a/experience.html
+++ b/experience.html
@@ -86,19 +86,19 @@
                 </div>
                 <div class="experiencePageBackground h-100">
                     <div class="container d-flex flex-column justify-content-between h-100 p-0">
-                        <div class="row mt-lg-5 pt-lg-5 m-0">
+                        <div class="row mt-lg-5 pt-lg-5 pb-lg-5  m-0">
                             <div class="col-12 col-lg-4 d-flex flex-column p-0">
                                 <h1 class="pageName mx-5 mx-lg-0" data-aos="fade-up">
                                     Doświadczenie
                                 </h1>
                                 <img src="img/doswiadczenie.jpg" class="img-fluid d-lg-none" alt="" data-aos="fade-up">
-                                <span class="mt-5 pageTxt mx-5 mx-lg-0 pb-5 pb-lg-0">
-                                    <div data-aos="fade-up" data-aos-delay="100">
+                                <span class="mt-5 pageTxt mx-5 mx-lg-0 pb-5 pb-lg-0" style="border-bottom:none" data-aos="fade-up" data-aos-delay="100">
+                                    <div >
                                         Mamy na koncie liczne projekty doradcze, w ramach których wdrażaliśmy wieloletnie strategie rozwoju ukierunkowane na budowę wartości. Posiadamy doświadczenie w pracy ze spółkami zróżnych sektorów, m.in. IT, TSL, budownictwo, dystrybucja, przemysł, usługi specjalistyczne. 
                                         <br><br>
                                         Braliśmy udział w kilkudziesięciu procesach M&A zakończonych transakcją o wartości od kilku do kilkuset milionów zł, zarówno jako doradca po stronie kupującego (buy-side), jak i sprzedającego (sell-side). Przeprowadziliśmy szereg szczegółowych analiz due diligence oraz wycen spółek będących potencjalnymi celami akwizycyjnymi dla naszych klientów. W większości analizy dotyczyły spółek technologicznych, dla których stosujemy metodykę wyceny w oparciu o zasoby kapitału intelektualnego.                                    
                                     </div>
-                                    <div class="row m-0" data-aos="fade-up" data-aos-delay="200">
+                                    <div class="row mx-0 mt-4 d-none d-lg-flex" >
                                         <a name="" id="" class="d-none  mt-5 d-lg-flex buttonRounded hvr-icon-wobble-horizontal bg-white justify-content-lg-center justify-content-between" href="team.html" role="button">
                                             <div class="arrowRight mr-lg-4">
                                                 <img src="img/arrow_right.svg" class="img-fluid hvr-icon" alt="">
@@ -106,12 +106,12 @@
                                             <span class="btnTxt bluePrimaryTxt flex-grow-1 align-self-center text-center">Poznaj zespół</span>
                                         </a>
                                     </div>
-                                    <a name="" id="" class="d-lg-none mt-5 buttonRounded hvr-icon-wobble-horizontal d-flex justify-content-lg-center justify-content-between" href="team.html" role="button">
+                                    <!-- <a name="" id="" class="d-lg-none mt-5 buttonRounded hvr-icon-wobble-horizontal d-flex justify-content-lg-center justify-content-between" href="team.html" role="button">
                                         <div class="arrowRight mr-lg-4">
                                             <img src="img/arrow_right2.svg" class="img-fluid hvr-icon" alt="">
                                         </div>
                                         <span class="btnTxt flex-grow-1 align-self-center text-center">Poznaj zespół</span>
-                                    </a>
+                                    </a> -->
                                 </span>
                                
                             </div>
@@ -123,27 +123,34 @@
         </div>
 
         <div class="container my-0 pb-5 pb-lg-0 px-5 px-lg-0">
-            <div class="row mt-5 mx-0">
-                <div class="col-12 p-0">
-                    <h1 class="categoryOffer bluePrimaryTxt" data-aos="fade-up">
+            <div class="row mt-5 pt-lg-5 mx-0">
+                <div class="col-12 col-lg-7 p-0">
+                    <h1 class="cellpicExperience bluePrimaryTxt mb-lg-4" data-aos="fade-up">
                         Wybrane projekty zrealizowane przez nas w ostatnim czasie:
                     </h1>
-                    <h2 class="mt-5 d-none d-lg-block myTitles" >
-                        Wdrożenie strategii rozwoju w spółce Bluesoft zakończone<br>transakcją sprzedaży
+                    <h2 class="mt-5 d-none d-lg-block myTitles animated fadeIn" >
+                        Wdrożenie strategii rozwoju w spółce Bluesoft zakończone transakcją sprzedaży
                         do inwestora strategicznego
                     </h2>
-                    <h2 class="mt-5 d-none d-lg-block myTitles">
-                        Realizacja inwestycji w spółkę technologiczną i skuteczne wyjście<br>do inwestora strategicznego na przykładzie spółki Teroplan
+                    <h2 class="mt-5 d-none d-lg-block myTitles animated fadeIn">
+                        Realizacja inwestycji w spółkę technologiczną i skuteczne wyjście do inwestora strategicznego na przykładzie spółki Teroplan
                     </h2> 
-                    <h2 class="mt-5 d-none d-lg-block myTitles">
-                        Wdrożenie modeli kontrolingowych<br>w spółkach informatycznych
+                    <h2 class="mt-5 d-none d-lg-block myTitles animated fadeIn">
+                        Wdrożenie modeli kontrolingowych w spółkach informatycznych
                     </h2>
                     <h2 class="mt-5 d-none d-lg-block myTitles">
-                        Wdrożenie wieloletniego modelu finansowego<br>połączone z procesem sukcesji 
+                        Wdrożenie wieloletniego modelu finansowego połączone z procesem sukcesji 
                     </h2>
                     <h2 class="mt-5 d-none d-lg-block myTitles">
-                        Wdrożenie systemu motywacyjnego dla Zarządu<br>w spółceusługowej o obrocie 1 miliard zł
+                        Wdrożenie systemu motywacyjnego dla Zarządu w spółceusługowej o obrocie 1 miliard zł
                     </h2>   
+                </div>
+                <div class="col-12 col-lg-4 offset-lg-1 mt-5 mt-lg-0 d-flex align-items-start justify-content-lg-center justify-content-between p-0">
+                    <a onclick="plusSlides(-1)" class="cursor leftArrow"> </a>
+                    <span class="bluePrimaryTxt sliderNumber mx-5">
+                        <sup id="currentSlide">1</sup>/<sub>5</sub>
+                    </span>
+                    <a onclick="plusSlides(1)" class="animated flash slower rightArrow cursor"></a>
                 </div>
             </div>
             <div class="row m-0">
@@ -153,16 +160,16 @@
                 <div class="col-12 d-flex justify-content-center  flex-lg-column flex-column-reverse experiencePageBackgroundBox p-0">
                    <div class="row">
                        <div class="col-12 col-lg-8">
-                            <span class="mySlides animated fadeInLeft">
+                            <span class="mySlides animated fadeIn">
                                 W latach 2018-2019 na zlecenie właścicieli spółki Bluesoft zrealizowaliśmy projekt wdrożenia procesów i narzędzi wspierających zarządzanie spółką w perspektywie średnioterminowej w postaci wielowymiarowego modelu operacyjno-finansowego na lata 2018-2020. W ramach realizacji strategii koordynowaliśmy proces akwizycji spółki Essembli, która uzupełniła pozycję rynkową Bluesoft o kompetencje rozwiązań dla energetyki. Następnie wspieraliśmy spółkę w procesie sprzedaży 100% udziałów do inwestora strategicznego. Proces zakończył się transakcją sprzedaży o wartości 200 milionów zł, nabywcą jest Orange Polska. 
                            </span>
-                           <span class="mySlides animated fadeInLeft">
+                           <span class="mySlides animated fadeIn">
                                 W ramach funduszu Giza Polish Ventures zidentyfikowaliśmy potencjał biznesowy spółki Teroplan (operator portalu e-podróżnik, dostawca rozwiązań informatycznych dla przewoźników pasażerskich) na wczesnym etapie rozwoju i przeprowadziliśmy inwestycję o wartości 3,6 mln zł (w kilku transzach). W latach 2016-2019 wspieraliśmy spółkę w realizacji założonej strategii, w ramach której m.in. zrealizowano akwizycję innej spółki technologicznej posiadającej kluczowe IP dla sektora docelowego, przeprowadzono ekspansję na dwa nowe rynki zagraniczne oraz wprowadzono na rynek nową linię biznesową - przewozy door to door pod marką Hoper. W 2019 roku zrealizowaliśmy proces wyjścia GPV z inwestycji do inwestora strategicznego  (Wirtualna Polska) przy wycenie spółki na poziomie 60 mln zł.                             </span>
-                            <span class="mySlides animated fadeInLeft">
+                            <span class="mySlides animated fadeIn">
                                 W okresie 2017-2020 zrealizowaliśmy kilka projektów wdrożenia pełnego modelu kontrolingowego w spółkach informatycznych. Projekt w każdym wypadku obejmował zdefiniowanie wymiarów modelu kontrolingowego, identyfikację źródeł danych, wdrożenie procesów kontrolingowych. Wynikiem realizacji wdrożenia był budżet oraz plan wieloletni oraz zestaw raportów zarządczych pozwalających na bieżącą analizę wykonania założonych planów budżetowych.                             </span>
-                            <span class="mySlides animated fadeInLeft">
+                            <span class="mySlides animated fadeIn">
                                 W latach 2014-2019 we współpracy z właścicielem oraz zarządem spółki z sektora dystrybucji i usług specjalistycznych (obroty na poziomie kilkudziesięciu milionów złotych) wdrożyliśmy kompleksowy model finansowy i kontrolingowy, który jednocześnie stanowił narzędzie wspierające sukcesję w obszarze zarządzania spółką, jako platforma komunikacji między właścicielem a managerami.                             </span>
-                            <span class="mySlides animated fadeInLeft">
+                            <span class="mySlides animated fadeIn">
                                 Braliśmy udział w opracowaniu długoterminowego systemu motywacyjnego dla Zarządu spółki usługowej opartego o wzrost wartości dla akcjonariuszy. Współpracujemy z właścicielami spółki oraz zarządem nad wdrożeniem systemu oraz rozliczaniem zamkniętych okresów.                            </span>
                        </div>
                    </div>
@@ -176,32 +183,21 @@
                             <div class="progressLine" onclick="currentSlide(5)"></div>
                          </div>
                     </div>
-                    <div class="col-12 col-lg-4 d-flex align-items-center justify-content-lg-center justify-content-between">
-                        <a onclick="plusSlides(-1)" class="cursor">
-                            <img src="img/left.png" class="img-fluid" alt="">
-                        </a>
-                        <span class="bluePrimaryTxt sliderNumber mx-5">
-                            <sup id="currentSlide">1</sup>/<sub>5</sub>
-                        </span>
-                        <a onclick="plusSlides(1)" class="animated flash slower rightArrow cursor">
-                            <img src="img/right.png" class="img-fluid" alt="">
-                        </a>
-                   </div>
                     <div class="col-12 d-lg-none">
-                        <h2 class="mt-5 text-black myMobileTitles animated fadeInLeft">
+                        <h2 class="mt-lg-5 text-black myMobileTitles animated animated fadeIn experienceCategory">
                             Wdrożenie strategii rozwoju w spółce Bluesoft zakończone transakcją sprzedaży <br>
                             do inwestora strategicznego
                         </h2>
-                        <h2 class="mt-5 text-black myMobileTitles animated fadeInLeft">
+                        <h2 class="mt-lg-5 text-black myMobileTitles animated animated fadeIn">
                             Realizacja inwestycji w spółkę technologiczną i skuteczne wyjście do inwestora strategicznego na przykładzie spółki Teroplan
                         </h2> 
-                        <h2 class="mt-5 text-black myMobileTitles animated fadeInLeft">
+                        <h2 class="mt-lg-5 text-black myMobileTitles animated fadeInLeft">
                             Wdrożenie modeli kontrolingowych w spółkach informatycznych
                         </h2> 
-                        <h2 class="mt-5 text-black myMobileTitles animated fadeInLeft">
+                        <h2 class="mt-lg-5 text-black myMobileTitles animated fadeInLeft">
                             Wdrożenie wieloletniego modelu finansowego połączone z procesem sukcesji 
                         </h2> 
-                        <h2 class="mt-5 text-black myMobileTitles animated fadeInLeft">
+                        <h2 class="mt-lg-5 text-black myMobileTitles animated fadeInLeft">
                             Wdrożenie systemu motywacyjnego dla Zarządu w spółce usługowej o obrocie 1 miliard zł
                         </h2>    
                     </div>
