--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
         </div> -->
 
         <div class="row my-5 my-lg-0 py-5 py-lg-0 px-5 m-0" id="experience">
-            <div class="container d-flex expierienceSection">
+            <div class="container d-flex expierienceSection px-lg-0">
                 <div class="col-12 col-lg-6 d-flex justify-content-center flex-column p-0">
                     <div class="row mx-0" data-aos="fade-up">
                         <span class="expierienceTxt"><span class="bluePrimaryTxt">Wykorzystujemy zgromadzone przez kilkanaście lat doświadczenia</span>
@@ -220,8 +220,8 @@
 
         
         <div class="container my-5 my-lg-0 py-5 py-lg-0 px-5 px-lg-0">
-            <div class="row teamSection">
-                <div class="col-12 col-lg-7 d-flex justify-content-center flex-column" >
+            <div class="row teamSection m-0">
+                <div class="col-12 col-lg-7 d-flex justify-content-center flex-column px-lg-0" >
                         <div class="row mx-0" data-aos="fade-up">
                             <span class="expierienceTxt">Członkowie zespołu łączą wieloletnie praktyczne doświadczenie w operacyjnym zarządzaniu
                                 przedsiębiorstwami w roli członka zarządu z kompetencjami w zakresie realizacji inwestycji
@@ -244,7 +244,7 @@
                             </a>
                         </div>
                     </div>
-                    <div class="col-12 col-lg-5 d-flex flex-column justify-content-center mt-5 mt-lg-0">
+                    <div class="col-12 col-lg-5 d-flex flex-column pr-lg-0 justify-content-center mt-5 mt-lg-0">
                         <div class="row mx-0">
                             <div class="col-12 d-flex justify-content-between align-items-lg-center p-0 flex-column-reverse flex-lg-row ">
                                 <div class="d-flex justify-content-center flex-column mt-3 mt-lg-0">
