--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                     </div>
                 </div>
                 <div class="homeBackground d-flex flex-column justify-content-start">
-                    <div class="container" id="logoHomePosition">
+                    <div class="container d-flex align-items-center" id="logoHomePosition">
                         <div class="homeLogo d-flex" data-aos="fade-up">
                             <img src="img/logo_white.svg" class="img-fluid" alt="">
                         </div>
@@ -114,7 +114,7 @@
                             Specjalizujemy się w maksymalizowaniu<br>
                             i budowaniu wartości przedsiębiorstw
                         </h1>
-                        <a href="#experience" class="arrowDown mr-5">
+                        <a href="#experience" class="arrowDown mr-5 mt-4">
                             <img src="img/arror_down.svg" class="img-fluid animated slow bounce infinite" alt="">
                         </a>
                     </div>
@@ -230,13 +230,13 @@
                             </span>
                         </div>
                         <div class="row mt-5 pt-5 d-none d-lg-flex mx-0" data-aos="fade-up" data-aos-delay="200">
-                            <a name="" id="" class="buttonRounded hvr-icon-wobble-horizontal d-flex justify-content-center" href="team.html" role="button">
+                            <a name="" id="" class="buttonRounded mb-2 hvr-icon-wobble-horizontal d-flex justify-content-center" href="team.html" role="button">
                                 <div class="arrowRight mr-4">
                                     <img src="img/arrow_right2.svg" class="img-fluid hvr-icon" alt="">
                                 </div>
                                 <span class="btnTxt">Poznaj zespół</span>
                             </a>
-                            <a name="" id="" class="buttonRounded hvr-icon-wobble-horizontal d-flex justify-content-center ml-xl-3" href="experience.html" role="button">
+                            <a name="" id="" class="buttonRounded mb-2 hvr-icon-wobble-horizontal d-flex justify-content-center ml-xl-3" href="experience.html" role="button">
                                 <div class="arrowRight mr-4">
                                     <img src="img/arrow_right2.svg" class="img-fluid hvr-icon" alt="">
                                 </div>
